# L3_Test

./: .gitignore  LICENSE  README.md  browser_connection.py
.github/workflows/: deploy.yml
VE_L3_AUTOMATION/: pyproject.toml  snowflake.yml  streamlit_app.py
finops_l3_lite/: PPAWAR 2025-11-13 19_19_36.ipynb  environment (1).yml  finops-l3-lite.ipynb  google_slides_manager.py
l3-finops-app/: .gitignore  AGENTS.md  README.md  deploy.sh  deploy_container.sh  environment.yml  pyproject.toml  requirements.txt  snowflake.yml  streamlit_app.py
l3-finops-app/pages/: 1_Customer_Lookup.py  2_Analysis_Status.py  3_Report_Generation.py  4_DBA_Action_Report.py
l3-finops-app/src/: config.py  google_client.py  queries.py  report_helpers.py  snowflake_client.py
sql/: README.md  deploy.sh  deploy_sql.sh
sql/procedures/other/: OTHER_ANALYSIS.sql  OTHER_DEPLOYMENT.sql  OTHER_ORCHESTRATOR.sql  OTHER_VIEWS.sql
sql/procedures/query/: QUERY_ANALYSIS.sql  QUERY_ATTRIBUTION_30D.sql  QUERY_DEPLOYMENT.sql  QUERY_HISTORY_30D.sql  QUERY_ORCHESTRATOR.sql  QUERY_TIMEOUT_WASTE.sql  QUERY_VIEWS.sql  REPEATED_QUERIES.sql
sql/procedures/roi/: ROI_ANALYSIS.sql  ROI_VIEWS.sql  SEARCH_OPTIMIZATION_ANALYSIS.sql  TOTAL_ACCOUNT_SAVINGS.sql
sql/procedures/shared/: ACCESS_HISTORY.sql  ACCOUNT_ORCHESTRATOR.sql  COST_TABLE.sql  SP_BUILD_INTRA_MONTH_WH.sql
sql/procedures/snowpipe/: COPY_HISTORY.sql  COPY_HISTORY_QUERY.sql  COPY_HISTORY_TABLE.sql  SNOWPIPE_ANALYSIS.sql  SNOWPIPE_COPY_HISTORY.sql  SNOWPIPE_PIPE_ANALYSIS.sql
sql/procedures/storage/: AUTO_CLUSTER_ANALYSIS.sql  STORAGE_ANALYSIS.sql  (+5 more)
(+41 files in other folders)
